# Vulkan3DEngine

./: .gitignore  CMakeLists.txt  notes.txt
include/: AppController.h  BufferManager.h  Camera.h  CameraMovementHandler.h  Component.h  Constants.h  Descriptors.h  DeviceManager.h  Entity.h  EntityComponents.h  FileUtils.h  FrameInfo.h  GfxPipeline.h  HashUtils.h  MathUtils.h  Model.h  PointLightRenderSystem.h  RenderSystem.h  Renderer.h  SimpleRenderSystem.h  SwapChainManager.h  WindowManager.h
shaders/: point_light.frag  point_light.vert  simple.frag  simple.vert
src/: AppController.cpp  BufferManager.cpp  Camera.cpp  CameraMovementHandler.cpp  Descriptors.cpp  DeviceManager.cpp  FileUtils.cpp  GfxPipeline.cpp  MathUtils.cpp  Model.cpp  PointLightRenderSystem.cpp  RenderSystem.cpp  Renderer.cpp  SimpleRenderSystem.cpp  SwapChainManager.cpp  WindowManager.cpp  main.cpp
